<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="addForeman">Add Foreman</string>
    <string name="addSprayer">Add Sprayer</string>
    <string name="app_name">mSpray</string>
    <string name="back">Back</string>
    <string name="chemicalUsed">The sprayers used&#8230;</string>
    <string name="chemicalUsed2">Second Chemical Used</string>
    <string name="confirm">OK</string>
    <string name="confirmDDT">DDT Spray Data</string>
    <string name="confirmNoSpray">Spray Data</string>
    <string name="confirmPyrethroid">Pyrethroid Spray Data</string>
    <string name="confirmUnsprayed">What was not sprayed?</string>
    <string name="DDTHeader">DDT sprayed by</string>
    <string name="PyrethroidHeader">Pyrethroid sprayed by</string>
    <string name="sprayHeader">sprayed by</string>
    <string name="NoSprayHeader">No rooms sprayed by</string>
    <string name="dataRecorded">Data Recorded</string>
    <string name="ddt">DDT</string>
    <string name="emptyString"/>
    <string name="emptyValue"> \? </string>
    <string name="finished">Finished</string>
    <string name="foreman">Foreman</string>
    <string name="foremanID">Foreman ID</string>
    <string name="gps_location">GPS Location</string>
    <string name="hintNumRooms"># of Rooms</string>
    <string name="hintNumShelters"># of Shelters</string>
    <string name="latitude">Latitude</string>
    <string name="location_found">I am at \n 29.81 S, 25.34 E</string>
    <string name="longitude">Longitude</string>
    <string name="mSprayTitle">mSpray</string>
    <string name="nfcInstructions">Place phone on top of the Sprayer\'s badge</string>
    <string name="no">No</string>
    <string name="noSpray">No Chemical</string>
    <string name="oneSprayer">1 sprayer</string>
    <string name="otherChemicalUsed">Other Chemical Used?</string>
    <string name="sprayerName">Sprayer</string>
    <string name="pyrethroid">Pyrethroid</string>
    <string name="refillCan">Refill Can</string>
    <string name="refillCanLabel">Refilled Can?</string>
    <string name="roomsSprayed">Rooms Sprayed</string>
    <string name="roomsSprayedLabel">Rooms Sprayed: </string>
    <string name="roomsUnsprayed">Rooms Unsprayed</string>
    <string name="roomsUnsprayedLabel">Rooms Unsprayed: </string>
    <string name="scanning">Scanning</string>
    <string name="scanBadge">Scan Badge</string>
    <string name="sheltersSprayed">Shelters Sprayed</string>
    <string name="sheltersSprayedLabel">Shelters Sprayed: </string>
    <string name="sheltersUnsprayed">Shelters Unsprayed</string>
    <string name="sheltersUnsprayedLabel">Shelters Unsprayed: </string>
    <string name="sprayer">Sprayer</string>
    <string name="sprayer2">Sprayer 2</string>
    <string name="sprayerIDs">Sprayer IDs</string>
    <string name="startSpray">Start New Spray</string>
    <string name="twoSprayers">2 sprayers</string>
    <string name="yes">Yes</string>
    
    <string name="scanSelfLabel">Who are you?</string>
    <string name="scanSelf">Scan my badge</string>
    
    <string name="scanSprayerLabel">Identify the sprayers for this house</string>
    <string name="scanSprayer">Scan a sprayer\'s badge</string>
    <string name="scanAnotherSprayer">Scan another sprayer\'s badge</string>

</resources>