<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MSpray"
    android:screenOrientation="portrait" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sprayer_form_textview_roomsSprayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roomsSprayed"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/sprayer_form_edittext_roomsSprayedValue"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/hintNumRooms" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sprayer_form_textview_sheltersSprayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sheltersSprayed"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/sprayer_form_edittext_sheltersSprayedValue"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/hintNumShelters" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sprayer_form_textview_canRefilled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canRefilled"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/sprayer_form_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/sprayer_form_radiobutton_canRefilledYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/sprayer_form_radiobutton_canRefilledNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/no" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/sprayer_form_button_backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/back" />

        <Button
            android:id="@+id/sprayer_form_button_confirmButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/confirm" 
           />
    </LinearLayout>

</RelativeLayout>