<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:screenOrientation="portrait" >

    <TextView
        android:id="@+id/gps_location_textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/gps_location"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gps_location_textview_contents"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/location_found"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/gps_location_layout_innerLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/gps_location_button_backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="28sp"
            android:text="@string/back" />

        <Button
            android:id="@+id/gps_location_button_confirmButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="28sp"
            android:text="@string/confirm" />
    </LinearLayout>

</RelativeLayout>