<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:screenOrientation="portrait" >

    <Button
        android:id="@+id/second_chemical_used_button_backButton"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/second_chemical_used_button_ddt"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/second_chemical_used_button_pyrethroid"
        android:layout_alignLeft="@+id/second_chemical_used_button_pyrethroid"
        android:layout_alignRight="@+id/second_chemical_used_button_pyrethroid"
        android:layout_marginBottom="10dp"
        android:text="@string/ddt" />

    <Button
        android:id="@+id/second_chemical_used_button_pyrethroid"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_centerVertical="true"
        android:text="@string/pyrethroid" />

    <TextView
        android:id="@+id/second_chemical_used_textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/chemicalUsed2"
        android:textSize="25dp" />

</RelativeLayout>