<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MSpray" >

    <Button
        android:id="@+id/chemical_used_button_ddtButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/ddt"
        android:textSize="@string/h2" />

    <Button
        android:id="@+id/chemical_used_button_pyrethroidButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/pyrethroid"
        android:textSize="@string/h2" />

    <Button
        android:id="@+id/chemical_used_button_noSprayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/noSpray"
        android:textSize="@string/h2" />

    <Button
        android:id="@+id/chemical_used_button_backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="@string/h2" />

</LinearLayout>